# songseeker

./: .gitignore  CLAUDE.md  app.js  docker-compose.yml  index.html  login.html  manifest.json  player-manager.js  plex-player.js  style.css
imagebuild/: Dockerfile  auth_server.py  default.conf  start.sh
tools/: README.md  generate-plex-mapping.js  missing-de.csv  package.json  plex-date-remapper.json  plex-manifest.json  plex-mapping-de-missing-full.csv  plex-mapping-de-missing-soundiiz.csv  plex-mapping-de-missing.csv  plex-mapping-de-test_2026-01-02T01-19-35-missing-full.csv  plex-mapping-de-test_2026-01-02T01-19-35-missing-soundiiz.csv  plex-mapping-de_2026-01-02T01-29-35-missing-full.csv  plex-mapping-de_2026-01-02T01-29-35-missing-soundiiz.csv  plex-mapping-de_2026-01-02T01-29-35.json  pyproject.toml
tools/plex_mapper/: __init__.py  check_mappings.py  check_missing.py  compare_mapping.py  create_playlist.py  custom_game.py  lock_years.py  main.py  manifest.py  mapping_tools.py  plex_api.py  plex_scan.py  validate_years.py
tools/youtube_music_adder/: README.md  __init__.py  progress.json  ytm_adder.py
