[tool.poetry]
name = "plex-mapper"
version = "1.0.0"
description = "Generate Plex mappings for SongSeeker Hitster cards and download missing songs"
authors = ["Andreas Barthen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "*"
requests = "*"
yt-dlp = "*"

[tool.poetry.scripts]
plex-mapper = "plex_mapper.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
