[tool.poetry]
name = "plex-mapper"
version = "1.0.0"
description = "Generate Plex mappings for SongSeeker Hitster cards and download missing songs"
authors = ["Andreas Barthen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.28.0"
yt-dlp = "*"
reportlab = ">=4.0.0"
qrcode = {version = ">=7.4.0", extras = ["pil"]}
Pillow = ">=10.0.0"

[tool.poetry.scripts]
plex-mapper = "plex_mapper.main:main"
custom-game = "plex_mapper.custom_game:main"
plex-scan = "plex_mapper.plex_scan:main"
validate-years = "plex_mapper.validate_years:main"
check-missing = "plex_mapper.check_missing:main"
mapping-tools = "plex_mapper.mapping_tools:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
