[tool.poetry]
name = "plex-mapper"
version = "1.0.0"
description = "Generate Plex mappings for SongSeeker Hitster cards and download missing songs"
authors = ["Andreas Barthen"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
json5 = ">=0.9.0"
requests = ">=2.28.0"
yt-dlp = "*"
reportlab = ">=4.0.0"
qrcode = {version = ">=7.4.0", extras = ["pil"]}
Pillow = ">=10.0.0"
playwright = ">=1.40.0"

[tool.poetry.scripts]
plex-mapper = "plex_mapper.main:main"
custom-game = "plex_mapper.custom_game:main"
mapping-tools = "plex_mapper.mapping_tools:main"
check-mappings = "plex_mapper.check_mappings:main"
validate-years = "plex_mapper.validate_years:main"
update-manifest = "plex_mapper.manifest:main"
create-playlist = "plex_mapper.create_playlist:main"
compare-mapping = "plex_mapper.compare_mapping:main"
lock-years = "plex_mapper.lock_years:main"
ytm-adder = "youtube_music_adder.ytm_adder:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
